[gd_scene load_steps=4 format=3 uid="uid://cnjyv2rugb8i5"]

[ext_resource type="Script" uid="uid://bgiu7o64asnn1" path="res://menu.gd" id="1_ouk20"]
[ext_resource type="Texture2D" uid="uid://l3e6d0625urk" path="res://sprites/menu bg2.png" id="2_4hy44"]
[ext_resource type="Texture2D" uid="uid://bc7wvy3niq024" path="res://sprites/cursor2.png" id="2_mae5d"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_ouk20")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("2_4hy44")

[node name="Cursor2" type="Sprite2D" parent="."]
position = Vector2(52, 296)
texture = ExtResource("2_mae5d")
centered = false

[node name="Start" type="Label" parent="."]
offset_left = 23.0
offset_top = 356.0
offset_right = 297.0
offset_bottom = 467.0
theme_override_colors/font_color = Color(0.31764707, 1, 1, 1)
theme_override_font_sizes/font_size = 80
text = "START"

[node name="Controls" type="Label" parent="."]
offset_left = 25.0
offset_top = 481.0
offset_right = 282.0
offset_bottom = 536.0
theme_override_colors/font_color = Color(0.31764707, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Controls"

[node name="ref" type="Label" parent="."]
visible = false
offset_left = 920.0
offset_top = 28.0
offset_right = 1477.0
offset_bottom = 620.0
theme_override_colors/font_color = Color(0.31764707, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "text1
text2
text3
text4
text5
text6
text7
text8"
autowrap_mode = 2

[node name="show_colors" type="Button" parent="."]
visible = false
offset_left = 528.0
offset_top = 510.0
offset_right = 1133.0
offset_bottom = 630.0
theme_override_colors/font_color = Color(0.49441028, 0.99999994, 0.6362569, 1)
theme_override_font_sizes/font_size = 30
text = "CLICK TO SHOW SUPPORTED COLORS
FOR THE LAST 5 SETTINGS"

[node name="input_frequency" type="LineEdit" parent="."]
visible = false
offset_left = 1022.0
offset_top = 30.0
offset_right = 1142.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 30
placeholder_text = "0.8"

[node name="input_block_speed" type="LineEdit" parent="input_frequency"]
layout_mode = 0
offset_top = 57.0
offset_right = 120.0
offset_bottom = 107.0
theme_override_font_sizes/font_size = 30
placeholder_text = "300"

[node name="input_player_speed" type="LineEdit" parent="input_frequency"]
layout_mode = 0
offset_left = 1.0
offset_top = 117.0
offset_right = 121.0
offset_bottom = 167.0
theme_override_font_sizes/font_size = 30
placeholder_text = "300"

[node name="input_font_0_9" type="LineEdit" parent="input_frequency"]
visible = false
layout_mode = 0
offset_left = -99.0
offset_top = 174.0
offset_right = 121.0
offset_bottom = 224.0
theme_override_font_sizes/font_size = 30
placeholder_text = "GHOST_WHITE"

[node name="input_font_10_19" type="LineEdit" parent="input_frequency"]
visible = false
layout_mode = 0
offset_left = -98.0
offset_top = 235.0
offset_right = 121.0
offset_bottom = 285.0
theme_override_font_sizes/font_size = 30
placeholder_text = "SKY_BLUE"

[node name="input_font_20_49" type="LineEdit" parent="input_frequency"]
visible = false
layout_mode = 0
offset_left = -100.0
offset_top = 291.0
offset_right = 120.0
offset_bottom = 341.0
theme_override_font_sizes/font_size = 30
placeholder_text = "LAWN_GREEN"

[node name="input_font_50_99" type="LineEdit" parent="input_frequency"]
visible = false
layout_mode = 0
offset_left = -104.0
offset_top = 349.0
offset_right = 120.0
offset_bottom = 399.0
theme_override_font_sizes/font_size = 30
placeholder_text = "YELLOW"

[node name="input_font_100" type="LineEdit" parent="input_frequency"]
visible = false
layout_mode = 0
offset_left = -105.0
offset_top = 408.0
offset_right = 120.0
offset_bottom = 458.0
theme_override_font_sizes/font_size = 30
placeholder_text = "CRIMSON"

[node name="Display" type="Label" parent="."]
offset_left = 528.0
offset_top = 25.0
offset_right = 1085.0
offset_bottom = 617.0
theme_override_colors/font_color = Color(0.31764707, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "KEYBOARD
Arrow keys (up/down) and Z to select something

CONTROLLER
Left joystick (up/down) or D-Pad (up/down) and A to select something"
autowrap_mode = 2
